[package]
name = "rgl"
version = "0.17.0"
edition = "2021"

[[bin]]
name = "rgl"

[dependencies]
anyhow = "1.0.99"
async-recursion = "1.1.1"
async-tungstenite = "0.30.0"
clap = { version = "4.5.46", features = ["cargo", "derive"] }
dashmap = "6.1.0"
dialoguer = "0.12.0"
dunce = "1.0.5"
enum_dispatch = "0.3.13"
fslock = "0.2.1"
indexmap = { version = "2.11.0", features = ["serde"] }
jsonc-parser = { version = "0.26.3", features = ["cst", "serde"] }
notify = "8.2.0"
once_cell = "1.21.3"
oxide_eval = { version = "0.1.2", features = ["math", "string", "semver-support"] }
paris = { version = "1.5.15", features = ["macros"] }
rayon = "1.11.0"
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143", features = ["preserve_order"] }
smol = "2.0.2"
strum = { version = "0.27.2", features = ["derive"] }
tempfile = "3.21.0"
ureq = "2.12.1"
uuid = { version = "1.18.0", features = ["v4"] }
walkdir = "2.5.0"
zip = "0.6.6"
