[package]
name = "rgl"
version = "0.17.0"
edition = "2021"

[[bin]]
name = "rgl"

[dependencies]
anyhow = "1.0.102"
async-recursion = "1.1.1"
async-tungstenite = "0.30.0"
clap = { version = "4.6.1", features = ["cargo", "derive"] }
dashmap = "6.2.1"
dialoguer = "0.12.0"
dunce = "1.0.5"
enum_dispatch = "0.3.13"
fslock = "0.2.1"
indexmap = { version = "2.14.0", features = ["serde"] }
jsonc-parser = { version = "0.26.3", features = ["cst", "serde"] }
notify = "8.2.0"
once_cell = "1.21.4"
oxide_eval = { version = "0.1.2", features = ["math", "string", "semver-support"] }
paris = { version = "1.5.15", features = ["macros"] }
rayon = "1.12.0"
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
smol = "2.0.2"
strum = { version = "0.28.0", features = ["derive"] }
tempfile = "3.27.0"
ureq = "2.12.1"
url = "2.5.8"
uuid = { version = "1.23.1", features = ["v4"] }
walkdir = "2.5.0"
zip = "0.6.6"
